# toolz

./: .gitignore  README.md  default.nix  flake.nix
.github/workflows/: pages.yml
dev/: checks.nix  formatter.nix  overlays.nix  shell.nix
docs/: ALPHAFOLD3.md
overlays/: flake-module.nix
templates/: flake-module.nix
templates/lib/: init-template.sh
templates/nix/: .gitignore  flake.nix
templates/nix/nix/: shell.nix
templates/pixi/: .gitignore  flake.nix
templates/pixi/nix/: shell.nix
templates/rust/: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
templates/rust/.github/workflows/: release.yml
templates/rust/nix/: formatter.nix  overlays.nix  packages.nix  shell.nix
templates/uv/nix/: formatter.nix  shell.nix
templates/uv2nix/: .envrc  .gitignore  README.md  flake.nix  pyproject.toml
templates/uv2nix/nix/: packages.nix  shell.nix  uv2nix.nix
templates/uv2nix/src/PROJ_NAME_SNAKE/: __init__.py
templates/uv2nix/tests/: test_main.py
website/: flake-module.nix  index.html
website/css/: styles.css
website/js/: config.js  search.js
