[package]
name = "PROJ_NAME"
version = "0.1.0"
edition = "2021"
authors = ["AUTHOR MAIL_ADDRESS"]
description = "DESCRIPTION"
license = "MIT"
repository = "https://github.com/yourusername/PROJ_NAME"
readme = "README.md"

[dependencies]
# Common dependencies (uncomment as needed)
# clap = { version = "4.5", features = ["derive"] }
# serde = { version = "1.0", features = ["derive"] }
# anyhow = "1.0"
# thiserror = "2.0"
# tokio = { version = "1", features = ["full"] }
# tracing = "0.1"

[features]
default = []

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
