[project]
name = "PROJ_NAME"
version = "0.1.0"
description = "A Python project managed with uv and Nix"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = []
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
]

dependencies = []

[project.scripts]
# Note: Module import uses underscores (PROJ_NAME_SNAKE), CLI name uses hyphens (PROJ_NAME)
PROJ_NAME = "PROJ_NAME_SNAKE:main"

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
